<resources>
    <string name="app_name">Attendance Marker</string>
    <string name="welcome_text">Welcome</string>
    <string name="attendance_marking_system">Attendance Marking System</string>
    <string name="instructor_register">Instructor Register</string>
    <string name="student_register">Student Register</string>
    <string name="instructor_login">Instructor Login</string>
    <string name="student_login">Student Login</string>
    <string name="instructor_logo">instructor logo</string>
    <string name="student_logo">student logo</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="your_email">Your Email Address</string>
    <string name="your_password">Your Password</string>
    <string name="log_in">Log in</string>
    <string name="signup_full_name">Enter Your Full Name</string>
    <string name="signup_initial_name">Full Name With Initials</string>
    <string name="type_your_password">Password (minimum 6 characters)</string>
    <string name="sign_up_logo">Sign up logo</string>
    <string name="register">Register</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_nic">Enter Your NIC Number</string>
    <string name="instructor_log_in">Instructor Log in</string>
    <string name="student_log_in">Student Log in</string>
    <string name="attendance">Mark Attendance</string>
    <string name="log_out">Log out</string>
    <string name="subject">Enter Your Subject</string>
    <string name="hi">Hi ! </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_attandance">Reset Attandance</string>
    <string name="name_will_show_in_here">name will show in here</string>
    <string name="to">to</string>
    <string name="copyright">© pasindu charith @2022 ICT5 batch - vta veyangoda</string>
</resources>