<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupimage"
    tools:context=".StudentSignupActivity">

    <ImageView
        android:id="@+id/signupImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/sign_up_logo"
        android:src="@drawable/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:hint="@string/signup_full_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"/>


            <EditText
                android:id="@+id/initialName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/signup_initial_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_nic"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="20sp"/>


            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone|number"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/passwordFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/type_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"/>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/stdRegisterbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>