<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_bg_instr"
    tools:context=".InstructorHomepageActivity">


    <LinearLayout
        android:id="@+id/detailCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:background="#5C000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083">

        <TextView
            android:id="@+id/nameHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/name_will_show_in_here"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/resetAttendance"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="#4870C3"
        android:text="@string/reset_attandance"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailCard"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/logOutInstructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />


</androidx.constraintlayout.widget.ConstraintLayout>