<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_image1"
    android:layout_height="match_parent"
    tools:context=".InstructorSignActivity">

    <Button
        android:id="@+id/btn_InstructorLogin"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="392dp"
        android:backgroundTint="@color/main_btn"
        android:text="@string/instructor_login"
        android:textColor="@color/main_pg_btn_color"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_TeacherRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/main_btn"
        android:text="@string/instructor_register"
        android:textColor="@color/main_pg_btn_color"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/btn_InstructorLogin"
        app:layout_constraintTop_toBottomOf="@+id/btn_InstructorLogin" />

    <ImageView
        android:id="@+id/imageView_InstructorLogo"
        android:layout_width="144dp"
        android:layout_height="136dp"
        android:contentDescription="@string/instructor_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_InstructorLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        app:srcCompat="@drawable/instructor_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>