<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image1"
    tools:context=".StudentSignActivity">

    <Button
        android:id="@+id/btn_StudentLogin"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="392dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:text="@string/student_login"
        android:textColor="@color/main_pg_btn_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_StudentRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:text="@string/student_register"
        android:textColor="@color/main_pg_btn_color"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/btn_StudentLogin"
        app:layout_constraintTop_toBottomOf="@+id/btn_StudentLogin" />

    <ImageView
        android:id="@+id/imageView_StudentLogo"
        android:layout_width="144dp"
        android:layout_height="136dp"
        android:contentDescription="@string/student_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_StudentLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        app:srcCompat="@drawable/student_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>